<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/question1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kedvencszin"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/answer1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="16dp"/>


        <EditText
            android:id="@+id/answer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/valasz1"
            app:layout_constraintTop_toBottomOf="@+id/question1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="16dp"
            android:layout_marginTop="8dp"/>


        <TextView
            android:id="@+id/question2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/autotipus"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/answer2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer1"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="16dp"/>


        <RadioGroup
            android:id="@+id/answer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/question2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/szedan"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <RadioButton
                android:id="@+id/option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sportos"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <RadioButton
                android:id="@+id/option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suv"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />
        </RadioGroup>


        <TextView
            android:id="@+id/question3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/h_ny_ves_vagy"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/answer3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer2"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="16dp"/>


        <EditText
            android:id="@+id/answer3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/rd_ide_a_v_laszt"
            app:layout_constraintTop_toBottomOf="@+id/question3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="16dp"
            android:layout_marginTop="8dp"/>


        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/k_ld_s"
            app:layout_constraintTop_toBottomOf="@+id/answer3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:padding="16dp"/>


        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@+id/submit_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:padding="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
