<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="24dp">






    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/registration"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/felhasznalo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/registrationTextView"
        android:textColor="#FFFFFF"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="yes"
        />
    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/emailcim"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_below="@id/usernameEditText"
        android:textColor="#FFFFFF"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="yes"
        />
    <EditText
        android:id="@+id/passWordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/jelsz"
        android:minHeight="48dp"
        android:padding="12dp"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/userEmailEditText"
        android:textColor="#FFFFFF"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="yes"
        />

    <EditText
        android:id="@+id/passWordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/password_again"
        android:minHeight="48dp"
        android:padding="12dp"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/passWordEditText"
        android:textColor="#FFFFFF"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="yes"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/passWordAgainEditText"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@android:color/white"
            android:onClick="register"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/cancel"
            android:onClick="cancel"/>


    </LinearLayout>







</RelativeLayout>